--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,4 +1,4 @@
 <section>
-  <h1>About Me</h1>
-  <p>A little something about me.</p>
+  <h1>关于我</h1>
+  <p>Pythoner, 苹果脑残粉, 有轻微洁癖, 强迫症患者。</p>
 </section>
